fixed the footer and removed the mysterious white space at the bottom:

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 #about {
-    margin: 2rem;
+    margin: 2rem 2rem 0rem 2rem;
     padding: 2rem;
     border-width: .3rem;
     border-style: solid;
@@ -30,4 +30,11 @@ h1 {
 
 p {
     text-indent: 1rem;
+}
+
+footer {
+    padding: .5rem;
+    text-align: center;
+    align-content: center;
+    margin-top: .25rem;
 }
